Added mainnet network info

--- a/nodes/templates/nodes/index.html
+++ b/nodes/templates/nodes/index.html
@@ -45,13 +45,13 @@
 {% endfor %}
 </div> <!-- Card columns -->
 
-<p class="card-text"><small class="text-muted">Last updated {{ last_update }} minute(s) ago</small></p>
+<p class="card-text"><small class="text-muted">Last updated {{ last_update_testnet }} minute(s) ago</small></p>
 </div> <!-- Card body -->
 </div> <!-- Card container -->
 
 
 
-<div class="card" style="min-height:25vh; overflow-y:scroll">
+<div class="card" style="min-height:50vh; overflow-y:scroll">
   <div class="card-body">
     <h5 class="card-title">Mainnet Status <a href="#" class="btn btn-outline-info btn-sm float-right">Details</a></h5>
 
@@ -72,7 +72,7 @@
 {% endfor %}
 
 </div> <!-- Card columns -->
-<p class="card-text"><small class="text-muted">Updates coming soon</small></p>
+<p class="card-text"><small class="text-muted">Last updated {{ last_update_mainnet }} minute(s) ago</small></p>
 </div> <!-- Card body -->
 </div> <!-- Card container -->
 
