--- a/nodes/templates/nodes/metrics.html
+++ b/nodes/templates/nodes/metrics.html
@@ -17,8 +17,8 @@
 
 <body>
 {% include "nodes/navbar.html" %}
-<div class="index-title jumbotron-fluid">
-<h1>Testnet Metrics</h1>
+<div class="index-title jumbotron-fluid" style="font-family: "Titillium Web", Arial, sans-serif;">
+<h1>{{network}}/Metrics</h1>
 </div> <!-- Intro -->
 
 
@@ -43,7 +43,7 @@
       <img class="card-img-top" src="{{ indivMetric.image_url }}" alt="{{ indivMetric.description }}">
     {% endif %}
     <div class="card-body">
-      <h5 class="card-title">{{ indivMetric.title }} <a href="/metrics/{{indivMetric.id}}" class="btn btn-outline-info btn-sm float-right">Details</a></h5></h5>
+      <h5 class="card-title">{{ indivMetric.title }} <a href="/{{network}}/metrics/{{indivMetric.id}}" class="btn btn-outline-info btn-sm float-right">Details</a></h5></h5>
       <p class="card-text">{{ indivMetric.description }} </p>
     </div>
   </div>
