--- a/nodes/templates/nodes/index.html
+++ b/nodes/templates/nodes/index.html
@@ -26,7 +26,7 @@
 
 <div class="card" style="min-height:50vh; overflow-y:scroll">
   <div class="card-body">
-    <h5 class="card-title">Testnet Status  <a href="#" class="btn btn-outline-info btn-sm float-right">Details</a></h5>
+    <h5 class="card-title">Testnet Status  <a href="/testnet/metrics" class="btn btn-outline-info btn-sm float-right">Details</a></h5>
 
 <div class="card-columns">
 {% for stat in networkStats_testnet %}
@@ -53,7 +53,7 @@
 
 <div class="card" style="min-height:50vh; overflow-y:scroll">
   <div class="card-body">
-    <h5 class="card-title">Mainnet Status <a href="#" class="btn btn-outline-info btn-sm float-right">Details</a></h5>
+    <h5 class="card-title">Mainnet Status <a href="/mainnet/metrics" class="btn btn-outline-info btn-sm float-right">Details coming soon</a></h5>
 
 <div class="card-columns">
 {% for stat in networkStats_mainnet %}
