--- a/nodes/templates/nodes/metric_detail.html
+++ b/nodes/templates/nodes/metric_detail.html
@@ -6,8 +6,6 @@
 {% load static %}
 <script src="{% static "nodes/jsUtils.js" %}"></script>
 <link rel="stylesheet" href="{% static "nodes/lndmon.css" %}"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
@@ -80,12 +78,12 @@ var chart = new Chart(ctx, {
       <img class="card-img-top" src="/{{ indivMetric.image_url }}" alt="{{ indivMetric.description }}">
     {% endif %}
     <div class="card-body">
-      <h5 class="card-title">{{ indivMetric.title }} <a href="/metrics/{{indivMetric.id}}" class="btn btn-outline-info btn-sm float-right">Details</a></h5></h5>
+      <h5 class="card-title">{{ indivMetric.title }} <a href="/{{network}}/metrics/{{indivMetric.id}}" class="btn btn-outline-info btn-sm float-right">Details</a></h5></h5>
       <p class="card-text">{{ indivMetric.description }} </p>
     </div>
   </div>
 {% empty %}
-      <li>View more metrics on at <a href="/metrics">Metrics</a> </li>
+      <li>View more metrics on at <a href="/{{network}}//metrics">Metrics</a> </li>
 {% endfor %}
 </div>
 
