--- a/nodes/templates/nodes/nodes_detail.html
+++ b/nodes/templates/nodes/nodes_detail.html
@@ -10,12 +10,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 </head>
 
 <body>
 {% include "nodes/navbar.html" %}
 
-    <div class="box" id="mynetwork">
+<div class="box" id="mynetwork">
    </div>
 
   <script type="text/javascript">
@@ -67,11 +69,12 @@
 
   </script>
 
+<div style="width:90%;margin:0 auto;">  <!-- Container metrics -->
 <div class="row" style="min-height:30vh">
   <div class="card col-md-6" style="width: 48%;">
     <div class="card-body">
       <h5 class="card-title">Node ID: {{ nodeInfo.alias }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/nodes/{{ nodeInfo.pub_key }}/{{ date_logged.date_unix }}">  {{ nodeInfo.pub_key}}</a> </h6>
+      <h6 class="card-subtitle mb-2 text-muted">PubKey: <a href="/{{network}}/nodes/{{ nodeInfo.pub_key }}/{{ date_logged.date_unix }}">  {{ nodeInfo.pub_key}}</a> </h6>
       <h6 class="card-subtitle mb-2 ">Number of channels: {{ nodeInfo.channels}} </h6>
       <h6 class="card-subtitle mb-2 ">Total capacity: {{ nodeInfo.capacity}} SAT </h6>
       <h6 class="card-subtitle mb-2 text-muted">Color {{ nodeInfo.color }} </h6>
@@ -90,7 +93,7 @@
       <div class="time-box">
         <ul>
           {% for oneDate in data_dates %}
-            <li><a href="/nodes/{{ nodeInfo.pub_key }}/{{oneDate.date_unix}}" >On {{ oneDate.date_display }} </a> </li>
+            <li><a href="/{{network}}/nodes/{{ nodeInfo.pub_key }}/{{oneDate.date_unix}}" >On {{ oneDate.date_display }} </a> </li>
           {% empty %}
             <p> No other dates available </p>
           {% endfor %}
@@ -99,6 +102,52 @@
     </div>
   </div>  <!-- Card -->
 </div>  <!-- Row -->
+
+<div class="row d-flex justify-content-center">
+<div class="card bg-light md-6" style="width: 40%;">
+  <canvas id="node_capacity"></canvas>
+
+  <script>
+  //Get passed network data
+  // var data_set = {{ test_data_set | safe }} ; //Has to be json encoded
+  var data_sets =  {{chart_dataset_capacity|safe}};
+  var ctx = document.getElementById('node_capacity').getContext('2d');
+  var chart = new Chart(ctx, {
+      // The type of chart we want to create
+      type: "line",
+      // The data for our dataset
+      data: { {% if chart_labels_capacity %}labels: {{chart_labels_capacity | safe}},{% endif %} datasets: data_sets },
+      // Configuration options go here
+      {{chart_options | safe}}
+  });
+  </script>
+</div> <!-- Card-->
+
+
+<div class="card bg-light md-6" style="width: 40%;">
+  <canvas id="node_channels"></canvas>
+
+  <script>
+  //Get passed network data
+  // var data_set = {{ test_data_set | safe }} ; //Has to be json encoded
+  var data_sets =  {{chart_dataset_chans|safe}};
+  var ctx = document.getElementById('node_channels').getContext('2d');
+  var chart = new Chart(ctx, {
+      // The type of chart we want to create
+      type: "line",
+      // The data for our dataset
+      data: { {% if chart_labels_chans %}labels: {{chart_labels_chans | safe}},{% endif %} datasets: data_sets },
+      // Configuration options go here
+      {{chart_options | safe}}
+  });
+  </script>
+</div> <!-- Card-->
+</div> <!-- Row -->
+
+
+</div>  <!-- Container metrics -->
+
+
 
 <table class="table table-striped table-sm table-details">
   <thead>
@@ -113,9 +162,9 @@
   <tbody>
     {% for edge in edgeTable %}
     <tr>
-      <th scope="row" class= "td-normal"> <a href="/channels/{{ edge.chan_id }}/{{ date_logged.date_unix }}">{{ edge.chan_id}} </a></th>
-      <td class= "td-small"> <a href="/nodes/{{ edge.node1_pub }}/{{date_logged.date_unix }}">{{ edge.node1_pub }} </a> </td>
-      <td class= "td-small"> <a href="/nodes/{{ edge.node2_pub }}/{{date_logged.date_unix }}">{{ edge.node2_pub }} </a> </td>
+      <th scope="row" class= "td-normal"> <a href="/{{network}}/channels/{{ edge.chan_id }}/{{ date_logged.date_unix }}">{{ edge.chan_id}} </a></th>
+      <td class= "td-small"> <a href="/{{network}}/nodes/{{ edge.node1_pub }}/{{date_logged.date_unix }}">{{ edge.node1_pub }} </a> </td>
+      <td class= "td-small"> <a href="/{{network}}/nodes/{{ edge.node2_pub }}/{{date_logged.date_unix }}">{{ edge.node2_pub }} </a> </td>
       <td class= "td-normal">{{ edge.capacity}} SAT</td>
       <td class= "td-small">{{ edge.chan_point}}</td>
     </tr>
