--- a/nodes/templates/nodes/index.html
+++ b/nodes/templates/nodes/index.html
@@ -53,7 +53,7 @@
 
 <div class="card" style="min-height:50vh; overflow-y:scroll">
   <div class="card-body">
-    <h5 class="card-title">Mainnet Status <a href="/mainnet/metrics" class="btn btn-outline-info btn-sm float-right">Details coming soon</a></h5>
+    <h5 class="card-title">Mainnet Status <a href="/mainnet/metrics" class="btn btn-outline-info btn-sm float-right">Details</a></h5>
 
 <div class="card-columns">
 {% for stat in networkStats_mainnet %}
