--- a/nodes/templates/nodes/nodes.html
+++ b/nodes/templates/nodes/nodes.html
@@ -42,18 +42,18 @@
 
   <nav aria-label="Nodes pagination">
     <ul class="pagination justify-content-center">
-        {% if unconnectedNodes.has_previous %}
+        {% if nodes.has_previous %}
           <li class="page-item"><a class="page-link" href="?page=1">&laquo; First </a></li>
-          <li class="page-item"><a class="page-link" href="?page={{ unconnectedNodes.previous_page_number }}">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="?page={{ nodes.previous_page_number }}">Previous</a></li>
         {% endif %}
           <li class="page-item active">
             <span class="page-link">
-               Page {{ unconnectedNodes.number }}
+               Page {{ nodes.number }}
              </span>
             </li>
-        {% if unconnectedNodes.has_next %}
-            <li class="page-item"><a class="page-link" href="?page={{ unconnectedNodes.next_page_number }}">Next</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{ unconnectedNodes.paginator.num_pages }}">Last &raquo;</a></li>
+        {% if nodes.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ nodes.next_page_number }}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ nodes.paginator.num_pages }}">Last &raquo;</a></li>
         {% endif %}
       </ul>
   </nav>
